--- a/css/home.css
+++ b/css/home.css
@@ -115,8 +115,8 @@ li {
     width: 100%;
     height: 100vh;
     background: var(--off-main-clr);
-    animation: hey 1.3s;
-    animation-delay: 3.3s;
+    animation: hey 0.7s;
+    animation-delay: 2s;
     animation-fill-mode: forwards;
     box-shadow: 3px 10px 10px black;
 }
@@ -133,7 +133,7 @@ li {
 #website-intro #website-intro-logo {
     width: 20vw;
     transition: 0.2s;
-    animation: fadein 3.8s;
+    animation: fadein 2.5s;
     animation-fill-mode: forwards;
 }
 
@@ -141,7 +141,7 @@ li {
     display: none;
     width: 20vw;
     transition: 0.2s;
-    animation: fadein 3.8s;
+    animation: fadein 2.5s;
     animation-fill-mode: forwards;
 }
 
@@ -162,6 +162,7 @@ li {
 
 header {
     height: 1000px;
+    position: relative;
 }
 
 header::before {
@@ -183,6 +184,40 @@ header::before {
     justify-content: flex-start;
     position: relative;
     height: 100%;
+}
+
+.choose-theme {
+    font-size: 1rem;
+    padding: 20px;
+    padding-top: 30px;
+    background-color: var(--off-main-clr);
+    position: absolute;
+    top: 70px;
+    left: 20px;
+    z-index: 3;
+    box-shadow: black 0px 5px 25px;
+}
+
+.choose-theme::before {
+    content: "";
+    position: absolute;
+    left: 10px;
+    top: -25px;
+    transform: rotate(180deg);
+    border: 13px solid;
+    border-color: var(--off-main-clr) #0000 #0000 #0000;
+}
+
+.choose-theme ion-icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 1.5rem;
+    fill: var(--sec-clr);
+}
+
+.choose-theme ion-icon:hover {
+    cursor: pointer;
 }
 
 
@@ -485,8 +520,20 @@ header::before {
     padding: 10px;
 }
 
-.sidebar-playlist img {
-    fill: var(--sec-clr);
+.sidebar-playlist ion-icon {
+    color: var(--sec-clr);
+    font-size: 24px;
+}
+
+.sidebar-playlist a {
+    border-bottom: 3px solid transparent;
+    padding: 5px;
+    transition: 0.3s;
+}
+
+.sidebar-playlist a:hover {
+    border-bottom: 3px solid var(--sec-clr);
+    transition: 0.3s;
 }
 
 .sidebar-playlist h3 {
@@ -518,16 +565,27 @@ header::before {
     padding: 10px;
 }
 
+.sidebar-unfinished-video img {
+    border: 2px solid var(--sec-clr);
+    border-radius: 3px;
+}
+
+.sidebar-unfinished-video a {
+    border-bottom: 3px solid transparent;
+    padding: 5px;
+    transition: 0.3s;
+}
+
+.sidebar-unfinished-video a:hover {
+    border-bottom: 3px solid var(--sec-clr);
+    transition: 0.3s;
+}
+
 .sidebar-unfinished-video h3 {
     font-family: "Montserrat", sans-serif;
     font-weight: 900;
     font-size: .75rem;
     white-space: nowrap;
-}
-
-.sidebar-unfinished-video img {
-    border: 2px solid var(--sec-clr);
-    border-radius: 3px;
 }
 
 
@@ -735,14 +793,33 @@ main .container {
         align-items: center;
         gap: 1rem;
     }
+    .sidebar-nav-list .item ion-icon {
+        font-size: 24px;
+        color: var(--sec-clr);
+    }
+    .sidebar-nav-list .item svg {
+        width: 24px;
+        fill: var(--sec-clr);
+    }
     .sidebar-nav-list .item a {
-        font-size: 1.5rem;
+        font-size: 1rem;
         color: var(--sec-clr);
         font-weight: 900;
+        transition: 0.3s;
+        padding: 5px;
+        border-bottom: 3px solid transparent;
+    }
+    .sidebar-nav-list .item a:hover {
+        border-bottom: 3px solid var(--sec-clr);
+        transition: 0.3s;
     }
     main .container .card {
         flex-direction: column;
         height: 60vw;
+    }
+    .card>a {
+        position: relative;
+        bottom: 0;
     }
     .card-video {
         width: 100%;
